# nomen

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  REFACTOR.md  RELEASE_NOTES.md  TODO.md  cliff.toml  example.nomen.toml  rust-toolchain.toml
docs/: API.md  DEVELOPMENT.md  FAQ.md  HOWTO.md  RELEASE.md  SPEC.md  TREE.md  development.nomen.toml  vectors.json
docs/changelogs/: v0.2.0.md
nomen/: Cargo.toml  build.rs
nomen-cli/: Cargo.toml
nomen-cli/src/: main.rs  nostr.rs  transfer.rs
nomen/src/: main.rs  util.rs
nomen/src/config/: cfg.rs  cli.rs  config_file.rs  mod.rs
nomen/src/db/: blockchain_index.rs  event_log.rs  index.rs  mod.rs  name.rs  name_details.rs  name_records.rs  raw.rs  relay_index.rs  stats.rs
nomen/src/db/queries/: insert_blockchain_index.sql  insert_name_event.sql  insert_raw_blockchain.sql  insert_transfer_cache.sql
nomen/src/subcommands/: mod.rs  server.rs  util.rs
nomen/src/subcommands/index/: blockchain.rs  mod.rs  owners.rs
nomen/src/subcommands/index/events/: event_data.rs  mod.rs  records.rs  relay_index.rs
nomen/src/subcommands/name/: mod.rs  new.rs
nomen/src/subcommands/server/: api.rs  explorer.rs  mod.rs
nomen/src/util/: keyval.rs  mod.rs  npub.rs  nsec.rs  pubkey.rs
nomen/templates/: base.html  explorer.html  index.html  name.html  newname.html  nsid.html  pubkey.html  stats.html  uncorroborated_claim.html  uncorroborated_claims.html  updaterecords.html
nomen/templates/transfer/: complete.html  initiate.html  sign.html
nomen_core/: Cargo.toml
nomen_core/src/: create.rs  extractor.rs  hash160.rs  kind.rs  lib.rs  name.rs  nsid.rs  nsid_builder.rs  transfer.rs
nomen_core/src/util/: create.rs  extractor.rs  keyval.rs  kind.rs  mod.rs  name.rs  nostr.rs  nsid.rs  nsid_builder.rs  transfer.rs
nomen_core/tests/: common.rs  integration_test.rs
scripts/: .regtest.toml  README.md  create.sh  create_bad.sh  helpers.py  records.sh  records_transfer.sh  regtest.sh  signet.sh  transfer.sh  update.sh
src/: args.rs  config.rs  db.rs  hash160.rs  lib.rs  main.rs  merkle.rs  name.rs  nsid.rs
src/config/: cfg.rs  cli.rs  config.rs  config_file.rs  mod.rs
src/db/: mod.rs  types.rs
src/db/queries/: blockchain_data.sql  children.sql  copy_name_nsid.sql  index_name_nsid.sql  insert_blockchain_index.sql  insert_create_event.sql  insert_name_event.sql  insert_namespace.sql  insert_records_event.sql  insert_transfer_event.sql  insert_update_event.sql  records.sql
src/documents/: create.rs  mod.rs  records.rs
src/name/: mod.rs  name.rs  validator.rs
src/nostr/: event.rs
src/subcommands/: TODOs.md  broadcast_new_name.rs  broadcast_records.rs  create_new_tx.rs  debug.rs  generate_keypair.rs  index_blockchain.rs  index_create_events.rs  index_records_events.rs  index_relays.rs  init_config.rs  lookup.rs  mod.rs  name.rs  server.rs  sign_event.rs  update_tx.rs  util.rs
src/subcommands/index/: REFACTOR.md  blockchain.rs  mod.rs  owners.rs
src/subcommands/index/events/: create.rs  event_data.rs  mod.rs  records.rs  transfer.rs  update.rs
src/subcommands/name/: mod.rs  new.rs  record.rs  transfer.rs  update.rs
src/util/: blockchain_kind.rs  childpair.rs  extractor.rs  hash160.rs  indigo_tx.rs  keyval.rs  kind.rs  metadata_extractor.rs  mod.rs  name.rs  nostr.rs  nsid.rs  nsid_builder.rs  pubkey.rs  transfer.rs
src/validators/: mod.rs
templates/: base.html  error.html  explorer.html  faqs.html  index.html  newname.html  newrecords.html  nsid.html  pubkey.html  uncorroborated_claims.html  updaterecords.html
