[package]
name = "indigo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-recursion = "1.0.2"
axum = "0.6.11"
# bincode = "2.0.0-rc.2"
bitcoin = {version = "0.29.2", features = ["base64"] }
bitcoincore-rpc = "0.16.0"
clap = { version = "4.1.8", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
futures-util = "0.3.26"
hex = "0.4.3"
log = "0.4.17"
# nostr-sdk = "0.19.1"
nostr-sdk = { git = "https://github.com/ursuscamp/nostr.git", branch = "replaceable-event-filter" }
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.7.1"
ripemd = "0.1.3"
rusqlite = "0.28.0"
secp256k1 = { version = "0.26.0", features = ["rand-std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.94"
sha2 = "0.10.6"
# sled = "0.34.7"
# sqlx = { version = "0.6.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-rusqlite = "0.3.0"
toml = "0.7.2"
yansi = "0.5.1"
